hw4_Samuel_Secondo/grammar.output
Terminals unused in grammar

    ASSIGN
    DOT
    KEYWORD_THIS
    KEYWORD_CLASS
    KEYWORD_EXTENDS
    UNKOWN


State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: statement $end

    1 statement: expr SEMICOLON
    2          | KEYWORD_INT ID SEMICOLON
    3          | KEYWORD_BOOL ID SEMICOLON
    4          | KEYWORD_VOID ID SEMICOLON
    5          | ID ID SEMICOLON
    6          | KEYWORD_INT SQUARE_PAIR ID SEMICOLON
    7          | KEYWORD_BOOL SQUARE_PAIR ID SEMICOLON
    8          | KEYWORD_VOID SQUARE_PAIR ID SEMICOLON
    9          | ID SQUARE_PAIR ID SEMICOLON
   10          | KEYWORD_IF OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement
   11          | KEYWORD_IF OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement KEYWORD_ELSE statement
   12          | KEYWORD_WHILE OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement
   13          | OPEN_BRACE statement_klein CLOSE_BRACE
   14          | KEYWORD_RETURN expr SEMICOLON
   15          | SEMICOLON

   16 statement_klein: statement statement_klein
   17                | %empty

   18 actuals: expr actuals_optional

   19 actuals_optional: COMMA expr actuals_optional
   20                 | %empty

   21 expr: expr TIMES expr
   22     | expr DIVIDE expr
   23     | expr PLUS expr
   24     | expr MINUS expr
   25     | OPEN_PARENTHESIS expr CLOSE_PARENTHESIS
   26     | expr AND expr
   27     | expr OR expr
   28     | expr EQUIVALENT expr
   29     | expr IS_NOT_EQUAL expr
   30     | expr LESS_THAN_OR_EQUAL expr
   31     | expr LESS_THAN expr
   32     | expr GREATER_THAN_OR_EQUAL expr
   33     | expr GREATER_THAN expr
   34     | MINUS expr
   35     | NEGATE expr
   36     | INTEGER
   37     | KEYWORD_TRUE
   38     | KEYWORD_FALSE
   39     | KEYWORD_NEW KEYWORD_INT OPEN_SQUARE expr CLOSE_SQUARE
   40     | KEYWORD_NEW KEYWORD_BOOL OPEN_SQUARE expr CLOSE_SQUARE
   41     | KEYWORD_NEW KEYWORD_VOID OPEN_SQUARE expr CLOSE_SQUARE
   42     | KEYWORD_NEW KEYWORD_INT SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE
   43     | KEYWORD_NEW KEYWORD_BOOL SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE
   44     | KEYWORD_NEW KEYWORD_VOID SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE
   45     | KEYWORD_NEW ID OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   46     | KEYWORD_NEW ID OPEN_SQUARE expr CLOSE_SQUARE
   47     | KEYWORD_NEW ID SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 1 2 3 4 5 6 7 8 9 14 15
    COMMA (259) 19
    KEYWORD_NEW (260) 39 40 41 42 43 44 45 46 47
    KEYWORD_RETURN (261) 14
    OPEN_SQUARE (262) 39 40 41 42 43 44 46 47
    CLOSE_SQUARE (263) 39 40 41 42 43 44 46 47
    ASSIGN (264)
    LESS_THAN_OR_EQUAL (265) 30
    GREATER_THAN_OR_EQUAL (266) 32
    EQUIVALENT (267) 28
    IS_NOT_EQUAL (268) 29
    LESS_THAN (269) 31
    GREATER_THAN (270) 33
    OR (271) 27
    AND (272) 26
    MINUS (273) 24 34
    PLUS (274) 23
    DIVIDE (275) 22
    TIMES (276) 21
    NEGATE (277) 35
    DOT (278)
    OPEN_PARENTHESIS (279) 10 11 12 25 45
    CLOSE_PARENTHESIS (280) 10 11 12 25 45
    OPEN_BRACE (281) 13
    CLOSE_BRACE (282) 13
    SQUARE_PAIR (283) 6 7 8 9 42 43 44 47
    KEYWORD_WHILE (284) 12
    KEYWORD_IF (285) 10 11
    KEYWORD_ELSE (286) 11
    KEYWORD_THIS (287)
    KEYWORD_CLASS (288)
    KEYWORD_EXTENDS (289)
    KEYWORD_INT (290) 2 6 39 42
    KEYWORD_BOOL (291) 3 7 40 43
    KEYWORD_VOID (292) 4 8 41 44
    KEYWORD_TRUE <val> (293) 37
    KEYWORD_FALSE <val> (294) 38
    INTEGER <val> (295) 36
    ID <id> (296) 2 3 4 5 6 7 8 9 45 46 47
    UNKOWN (297)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    statement <node> (44)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 0 10 11 12 16
    statement_klein <body> (45)
        on left: 16 17
        on right: 13 16
    actuals <actual> (46)
        on left: 18
        on right: 45
    actuals_optional <actual> (47)
        on left: 19 20
        on right: 18 19
    expr <node> (48)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 1 10 11 12 14 18 19 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 39 40 41 42 43 44 46 47


State 0

    0 $accept: . statement $end

    SEMICOLON         shift, and go to state 1
    KEYWORD_NEW       shift, and go to state 2
    KEYWORD_RETURN    shift, and go to state 3
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    OPEN_BRACE        shift, and go to state 7
    KEYWORD_WHILE     shift, and go to state 8
    KEYWORD_IF        shift, and go to state 9
    KEYWORD_INT       shift, and go to state 10
    KEYWORD_BOOL      shift, and go to state 11
    KEYWORD_VOID      shift, and go to state 12
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15
    ID                shift, and go to state 16

    statement  go to state 17
    expr       go to state 18


State 1

   15 statement: SEMICOLON .

    $default  reduce using rule 15 (statement)


State 2

   39 expr: KEYWORD_NEW . KEYWORD_INT OPEN_SQUARE expr CLOSE_SQUARE
   40     | KEYWORD_NEW . KEYWORD_BOOL OPEN_SQUARE expr CLOSE_SQUARE
   41     | KEYWORD_NEW . KEYWORD_VOID OPEN_SQUARE expr CLOSE_SQUARE
   42     | KEYWORD_NEW . KEYWORD_INT SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE
   43     | KEYWORD_NEW . KEYWORD_BOOL SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE
   44     | KEYWORD_NEW . KEYWORD_VOID SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE
   45     | KEYWORD_NEW . ID OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   46     | KEYWORD_NEW . ID OPEN_SQUARE expr CLOSE_SQUARE
   47     | KEYWORD_NEW . ID SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE

    KEYWORD_INT   shift, and go to state 19
    KEYWORD_BOOL  shift, and go to state 20
    KEYWORD_VOID  shift, and go to state 21
    ID            shift, and go to state 22


State 3

   14 statement: KEYWORD_RETURN . expr SEMICOLON

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 23


State 4

   34 expr: MINUS . expr

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 24


State 5

   35 expr: NEGATE . expr

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 25


State 6

   25 expr: OPEN_PARENTHESIS . expr CLOSE_PARENTHESIS

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 26


State 7

   13 statement: OPEN_BRACE . statement_klein CLOSE_BRACE

    SEMICOLON         shift, and go to state 1
    KEYWORD_NEW       shift, and go to state 2
    KEYWORD_RETURN    shift, and go to state 3
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    OPEN_BRACE        shift, and go to state 7
    KEYWORD_WHILE     shift, and go to state 8
    KEYWORD_IF        shift, and go to state 9
    KEYWORD_INT       shift, and go to state 10
    KEYWORD_BOOL      shift, and go to state 11
    KEYWORD_VOID      shift, and go to state 12
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15
    ID                shift, and go to state 16

    $default  reduce using rule 17 (statement_klein)

    statement        go to state 27
    statement_klein  go to state 28
    expr             go to state 18


State 8

   12 statement: KEYWORD_WHILE . OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement

    OPEN_PARENTHESIS  shift, and go to state 29


State 9

   10 statement: KEYWORD_IF . OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement
   11          | KEYWORD_IF . OPEN_PARENTHESIS expr CLOSE_PARENTHESIS statement KEYWORD_ELSE statement

    OPEN_PARENTHESIS  shift, and go to state 30


State 10

    2 statement: KEYWORD_INT . ID SEMICOLON
    6          | KEYWORD_INT . SQUARE_PAIR ID SEMICOLON

    SQUARE_PAIR  shift, and go to state 31
    ID           shift, and go to state 32


State 11

    3 statement: KEYWORD_BOOL . ID SEMICOLON
    7          | KEYWORD_BOOL . SQUARE_PAIR ID SEMICOLON

    SQUARE_PAIR  shift, and go to state 33
    ID           shift, and go to state 34


State 12

    4 statement: KEYWORD_VOID . ID SEMICOLON
    8          | KEYWORD_VOID . SQUARE_PAIR ID SEMICOLON

    SQUARE_PAIR  shift, and go to state 35
    ID           shift, and go to state 36


State 13

   37 expr: KEYWORD_TRUE .

    $default  reduce using rule 37 (expr)


State 14

   38 expr: KEYWORD_FALSE .

    $default  reduce using rule 38 (expr)


State 15

   36 expr: INTEGER .

    $default  reduce using rule 36 (expr)


State 16

    5 statement: ID . ID SEMICOLON
    9          | ID . SQUARE_PAIR ID SEMICOLON

    SQUARE_PAIR  shift, and go to state 37
    ID           shift, and go to state 38


State 17

    0 $accept: statement . $end

    $end  shift, and go to state 39


State 18

    1 statement: expr . SEMICOLON
   21 expr: expr . TIMES expr
   22     | expr . DIVIDE expr
   23     | expr . PLUS expr
   24     | expr . MINUS expr
   26     | expr . AND expr
   27     | expr . OR expr
   28     | expr . EQUIVALENT expr
   29     | expr . IS_NOT_EQUAL expr
   30     | expr . LESS_THAN_OR_EQUAL expr
   31     | expr . LESS_THAN expr
   32     | expr . GREATER_THAN_OR_EQUAL expr
   33     | expr . GREATER_THAN expr

    SEMICOLON              shift, and go to state 40
    LESS_THAN_OR_EQUAL     shift, and go to state 41
    GREATER_THAN_OR_EQUAL  shift, and go to state 42
    EQUIVALENT             shift, and go to state 43
    IS_NOT_EQUAL           shift, and go to state 44
    LESS_THAN              shift, and go to state 45
    GREATER_THAN           shift, and go to state 46
    OR                     shift, and go to state 47
    AND                    shift, and go to state 48
    MINUS                  shift, and go to state 49
    PLUS                   shift, and go to state 50
    DIVIDE                 shift, and go to state 51
    TIMES                  shift, and go to state 52


State 19

   39 expr: KEYWORD_NEW KEYWORD_INT . OPEN_SQUARE expr CLOSE_SQUARE
   42     | KEYWORD_NEW KEYWORD_INT . SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE

    OPEN_SQUARE  shift, and go to state 53
    SQUARE_PAIR  shift, and go to state 54


State 20

   40 expr: KEYWORD_NEW KEYWORD_BOOL . OPEN_SQUARE expr CLOSE_SQUARE
   43     | KEYWORD_NEW KEYWORD_BOOL . SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE

    OPEN_SQUARE  shift, and go to state 55
    SQUARE_PAIR  shift, and go to state 56


State 21

   41 expr: KEYWORD_NEW KEYWORD_VOID . OPEN_SQUARE expr CLOSE_SQUARE
   44     | KEYWORD_NEW KEYWORD_VOID . SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE

    OPEN_SQUARE  shift, and go to state 57
    SQUARE_PAIR  shift, and go to state 58


State 22

   45 expr: KEYWORD_NEW ID . OPEN_PARENTHESIS actuals CLOSE_PARENTHESIS
   46     | KEYWORD_NEW ID . OPEN_SQUARE expr CLOSE_SQUARE
   47     | KEYWORD_NEW ID . SQUARE_PAIR OPEN_SQUARE expr CLOSE_SQUARE

    OPEN_SQUARE       shift, and go to state 59
    OPEN_PARENTHESIS  shift, and go to state 60
    SQUARE_PAIR       shift, and go to state 61


State 23

   14 statement: KEYWORD_RETURN expr . SEMICOLON
   21 expr: expr . TIMES expr
   22     | expr . DIVIDE expr
   23     | expr . PLUS expr
   24     | expr . MINUS expr
   26     | expr . AND expr
   27     | expr . OR expr
   28     | expr . EQUIVALENT expr
   29     | expr . IS_NOT_EQUAL expr
   30     | expr . LESS_THAN_OR_EQUAL expr
   31     | expr . LESS_THAN expr
   32     | expr . GREATER_THAN_OR_EQUAL expr
   33     | expr . GREATER_THAN expr

    SEMICOLON              shift, and go to state 62
    LESS_THAN_OR_EQUAL     shift, and go to state 41
    GREATER_THAN_OR_EQUAL  shift, and go to state 42
    EQUIVALENT             shift, and go to state 43
    IS_NOT_EQUAL           shift, and go to state 44
    LESS_THAN              shift, and go to state 45
    GREATER_THAN           shift, and go to state 46
    OR                     shift, and go to state 47
    AND                    shift, and go to state 48
    MINUS                  shift, and go to state 49
    PLUS                   shift, and go to state 50
    DIVIDE                 shift, and go to state 51
    TIMES                  shift, and go to state 52


State 24

   21 expr: expr . TIMES expr
   22     | expr . DIVIDE expr
   23     | expr . PLUS expr
   24     | expr . MINUS expr
   26     | expr . AND expr
   27     | expr . OR expr
   28     | expr . EQUIVALENT expr
   29     | expr . IS_NOT_EQUAL expr
   30     | expr . LESS_THAN_OR_EQUAL expr
   31     | expr . LESS_THAN expr
   32     | expr . GREATER_THAN_OR_EQUAL expr
   33     | expr . GREATER_THAN expr
   34     | MINUS expr .

    PLUS    shift, and go to state 50
    DIVIDE  shift, and go to state 51
    TIMES   shift, and go to state 52

    $default  reduce using rule 34 (expr)


State 25

   21 expr: expr . TIMES expr
   22     | expr . DIVIDE expr
   23     | expr . PLUS expr
   24     | expr . MINUS expr
   26     | expr . AND expr
   27     | expr . OR expr
   28     | expr . EQUIVALENT expr
   29     | expr . IS_NOT_EQUAL expr
   30     | expr . LESS_THAN_OR_EQUAL expr
   31     | expr . LESS_THAN expr
   32     | expr . GREATER_THAN_OR_EQUAL expr
   33     | expr . GREATER_THAN expr
   35     | NEGATE expr .

    $default  reduce using rule 35 (expr)


State 26

   21 expr: expr . TIMES expr
   22     | expr . DIVIDE expr
   23     | expr . PLUS expr
   24     | expr . MINUS expr
   25     | OPEN_PARENTHESIS expr . CLOSE_PARENTHESIS
   26     | expr . AND expr
   27     | expr . OR expr
   28     | expr . EQUIVALENT expr
   29     | expr . IS_NOT_EQUAL expr
   30     | expr . LESS_THAN_OR_EQUAL expr
   31     | expr . LESS_THAN expr
   32     | expr . GREATER_THAN_OR_EQUAL expr
   33     | expr . GREATER_THAN expr

    LESS_THAN_OR_EQUAL     shift, and go to state 41
    GREATER_THAN_OR_EQUAL  shift, and go to state 42
    EQUIVALENT             shift, and go to state 43
    IS_NOT_EQUAL           shift, and go to state 44
    LESS_THAN              shift, and go to state 45
    GREATER_THAN           shift, and go to state 46
    OR                     shift, and go to state 47
    AND                    shift, and go to state 48
    MINUS                  shift, and go to state 49
    PLUS                   shift, and go to state 50
    DIVIDE                 shift, and go to state 51
    TIMES                  shift, and go to state 52
    CLOSE_PARENTHESIS      shift, and go to state 63


State 27

   16 statement_klein: statement . statement_klein

    SEMICOLON         shift, and go to state 1
    KEYWORD_NEW       shift, and go to state 2
    KEYWORD_RETURN    shift, and go to state 3
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    OPEN_BRACE        shift, and go to state 7
    KEYWORD_WHILE     shift, and go to state 8
    KEYWORD_IF        shift, and go to state 9
    KEYWORD_INT       shift, and go to state 10
    KEYWORD_BOOL      shift, and go to state 11
    KEYWORD_VOID      shift, and go to state 12
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15
    ID                shift, and go to state 16

    $default  reduce using rule 17 (statement_klein)

    statement        go to state 27
    statement_klein  go to state 64
    expr             go to state 18


State 28

   13 statement: OPEN_BRACE statement_klein . CLOSE_BRACE

    CLOSE_BRACE  shift, and go to state 65


State 29

   12 statement: KEYWORD_WHILE OPEN_PARENTHESIS . expr CLOSE_PARENTHESIS statement

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 66


State 30

   10 statement: KEYWORD_IF OPEN_PARENTHESIS . expr CLOSE_PARENTHESIS statement
   11          | KEYWORD_IF OPEN_PARENTHESIS . expr CLOSE_PARENTHESIS statement KEYWORD_ELSE statement

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 67


State 31

    6 statement: KEYWORD_INT SQUARE_PAIR . ID SEMICOLON

    ID  shift, and go to state 68


State 32

    2 statement: KEYWORD_INT ID . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 33

    7 statement: KEYWORD_BOOL SQUARE_PAIR . ID SEMICOLON

    ID  shift, and go to state 70


State 34

    3 statement: KEYWORD_BOOL ID . SEMICOLON

    SEMICOLON  shift, and go to state 71


State 35

    8 statement: KEYWORD_VOID SQUARE_PAIR . ID SEMICOLON

    ID  shift, and go to state 72


State 36

    4 statement: KEYWORD_VOID ID . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 37

    9 statement: ID SQUARE_PAIR . ID SEMICOLON

    ID  shift, and go to state 74


State 38

    5 statement: ID ID . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 39

    0 $accept: statement $end .

    $default  accept


State 40

    1 statement: expr SEMICOLON .

    $default  reduce using rule 1 (statement)


State 41

   30 expr: expr LESS_THAN_OR_EQUAL . expr

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 76


State 42

   32 expr: expr GREATER_THAN_OR_EQUAL . expr

    KEYWORD_NEW       shift, and go to state 2
    MINUS             shift, and go to state 4
    NEGATE            shift, and go to state 5
    OPEN_PARENTHESIS  shift, and go to state 6
    KEYWORD_TRUE      shift, and go to state 13
    KEYWORD_FALSE     shift, and go to state 14
    INTEGER           shift, and go to state 15

    expr  go to state 77


State 43

   28 expr: expr EQUIVALENT . expr
